Ingest input and output paths